--- a/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,3 +1,10 @@
-<h2>cursos component!</h2>
+<h2>Lista de cursos {{TitApp}}</h2>
 
 <app-curso-detalhe></app-curso-detalhe>
+
+
+<ul>
+  <li *ngFor="let item of Lista">
+    {{ item }}
+  </li>
+</ul>
