Updates related to class https://www.youtube.com/watch?v=7PI-2pvLTu8 with two way databaiden

--- a/data-biding/src/app/app.component.html
+++ b/data-biding/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-two-way-data-baiden></app-two-way-data-baiden>
+
 <app-event-biden></app-event-biden>
 <app-class-biden></app-class-biden>
 <app-data-biding></app-data-biding>
