updates related to class 13 https://www.youtube.com/watch?v=G2cBpYZ0fzk

--- a/data-biding/src/app/app.component.html
+++ b/data-biding/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-imput-propert-pai></app-imput-propert-pai>
+
 <app-two-way-data-baiden></app-two-way-data-baiden>
 
 <app-event-biden></app-event-biden>
