updates related to class 14 https://www.youtube.com/watch?v=Lbwk8oDJrCU

--- a/data-biding/src/app/app.component.html
+++ b/data-biding/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-output-property [valor] = "valorInicial"
+(mudouValor) = "onMudouValor($event)"></app-output-property>
+
 <app-imput-propert-pai></app-imput-propert-pai>
 
 <app-two-way-data-baiden></app-two-way-data-baiden>
