--- a/data-biding/src/app/app.component.html
+++ b/data-biding/src/app/app.component.html
@@ -1,3 +1,8 @@
+<app-ciclo [capitalInicial] = "valorInicial" *ngIf="!deletarCiclo"  ></app-ciclo>
+<button (click)="mudaValor()" > mudar valor</button>
+<button (click)="obliterar()" > obliterar</button>
+
+
 <app-output-property [valor] = "valorInicial"
 (mudouValor) = "onMudouValor($event)"></app-output-property>
 
