class 16 https://www.youtube.com/watch?v=WO3LdMeh8WU

--- a/data-biding/src/app/app.component.html
+++ b/data-biding/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-access-dom [valor] = "valorInicial"
+(mudouValor) = "onMudouValor($event)"></app-access-dom>
 <app-ciclo [capitalInicial] = "valorInicial" *ngIf="!deletarCiclo"  ></app-ciclo>
 <button (click)="mudaValor()" > mudar valor</button>
 <button (click)="obliterar()" > obliterar</button>
